--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,7 @@
           </ul>
           <ul class="nav ml-auto">
             <li class="nav-item">
-              <button class="btn btn-fab btn-theme no-shadow"><a href="../html/index-english.html">EN</a></button>
+              <button class="btn btn-fab btn-theme no-shadow"><a href="https://portifolio-o9skju9st-raquelsscode.vercel.app/html/index-english.html">EN</a></button>
             </li>
           </ul>
         </div>
