--- a/html/index-english.html
+++ b/html/index-english.html
@@ -78,7 +78,7 @@
           </ul>
           <ul class="nav ml-auto">
             <li class="nav-item">
-              <button class="btn btn-fab btn-theme no-shadow"><a href="../html/index.html">PT</a></button>
+              <button class="btn btn-fab btn-theme no-shadow"><a href="./index.html">PT</a></button>
             </li>
           </ul>
         </div>
