--- a/html/index.html
+++ b/html/index.html
@@ -114,6 +114,7 @@
             <li><b>Genêro:</b>Feminino</li>
           </ul>
           <button class="btn btn-theme-outline"><a href="../assets/documents/Currículo-Raquel-Santos.pdf" download="Currículo-Raquel-Santos">Download CV</a></button>
+          <button class="btn btn-theme-outline"><a href="https://www.linkedin.com/in/raquel-santos-da-silva/">Linkedin</a></button>
         </div>
       </div>
     </div>
