--- a/html/index-english.html
+++ b/html/index-english.html
@@ -115,6 +115,7 @@
             <li><b>Gender:</b>Feminino</li>
           </ul>
           <button class="btn btn-theme-outline"><a href="../assets/documents/Currículo-Raquel-Santos.pdf" download="Currículo-Raquel-Santos">Download CV</a></button>
+          <button class="btn btn-theme-outline"><a href="https://www.linkedin.com/in/raquel-santos-da-silva/" target="_blank">Linkedin</a></button
         </div>
       </div>
     </div>
