--- a/html/index-english.html
+++ b/html/index-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <title>Raquel Santos</title>
-
-  <link rel="stylesheet" type="text/css" href="../assets/css/index.css" media="screen" />
+  
+  <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
 
@@ -25,7 +25,8 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/virtual.css">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/topbar.virtual.css">
-  
+
+  <link rel="stylesheet" type="text/css" href="../assets/css/index.css" />
 </head>
 <body class="theme-red">
   
@@ -41,7 +42,7 @@
       <div class="d-block">
         <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
       </div>
-    </div>
+      </div>
     <div class="set-menu">
       <p>Select Color</p>
       <div class="color-bar" data-toggle="selected">
