--- a/html/index.html
+++ b/html/index.html
@@ -106,7 +106,7 @@
           <h1 class="fw-light">Raquel Santos</h1>
           <h5 class="fg-theme mb-3">Desenvolvedora FullStack</h5>
           <p class="text-muted">Formada em <strong>Administração</strong> e agora em processo de mudança de carreira para a <strong>programação</strong>, a verdade é que sempre amei tecnologia, e agora espero conquistar um crescimento enorme com o que <strong>amo fazer</strong>. Estou em busca de <strong>excelência
-            profissional</strong>, plano de carreira e novos desafios, quero poder provar a cada dia minhas <strong>habilidades</strong> e passar por cima de qualquer obstaculo. Sou nerd de carteirinha, amo video games, livros e andar de bike no fim de semanas.</p>
+            profissional</strong>, plano de carreira e novos desafios, quero poder provar a cada dia minhas <strong>habilidades</strong> e passar por cima de qualquer obstáculo. Sou nerd de carteirinha, amo video games, livros e andar de bike aos fins de semanas.</p>
           <ul class="theme-list">
             <li><b>Sou de:</b> São Paulo, SP</li>
             <li><b>Morando em:</b> São Paulo, SP</li>
