--- a/html/index.html
+++ b/html/index.html
@@ -261,7 +261,7 @@
 
       <div class="gridder my-3">
         <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/Projeto_Planets_of_Star_Wars.png" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+          <div class="img-place" data-src="../assets/img/work/Projeto_Planets_of_Star_Wars.png">
             <img src="../assets/img/work/Projeto_Planets_of_Star_Wars.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Star Wars Planets</h5>
