--- a/html/index.html
+++ b/html/index.html
@@ -271,7 +271,7 @@
           </div>
         </div>
         <div class="grid-item jogos wow">
-          <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+          <div class="img-place">
             <img src="../assets/img/work/eterncaogames.png" alt="">
             <a href="https://www.instagram.com/eternacaogames/" target="_blank">
             <div class="img-caption">
@@ -294,7 +294,7 @@
             <img src="../assets/img/work/shop.png" alt="Preview Project">
             <div class="img-caption">
               <h5 class="fg-theme">Online Store</h5>
-              <a href="online-store-77ys9obnq-raquelsscode.vercel.app" target="_blank">
+              <a href="https://online-store-theta.vercel.app/" target="_blank">
               <button class="btn btn-theme-outline">Visitar</button></a><a href="https://github.com/raquelsscode/Online-Store" target="_blank"><button class="btn btn-theme-outline">GitHub</button></a>
             </div>
           </div>
