--- a/html/index.html
+++ b/html/index.html
@@ -285,6 +285,7 @@
             <a href="https://wallet-vert-nine.vercel.app/" target="_blank"></a>
             <div class="img-caption">
               <h5 class="fg-theme">Wallet</h5>
+              <a href="https://wallet-vert-nine.vercel.app/" target="_blank">
               <button class="btn btn-theme-outline">Visitar</button></a><a href="https://github.com/raquelsscode/Wallet" target="_blank"><button class="btn btn-theme-outline">GitHub</button></a>
             </div>
           </div>
