--- a/html/index-english.html
+++ b/html/index-english.html
@@ -263,7 +263,7 @@
 
       <div class="gridder my-3">
         <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/Projeto_Planets_of_Star_Wars.png" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+          <div class="img-place">
             <img src="../assets/img/work/Projeto_Planets_of_Star_Wars.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Star Wars Planets</h5>
@@ -287,6 +287,7 @@
             <a href="https://wallet-vert-nine.vercel.app/" target="_blank"></a>
             <div class="img-caption">
               <h5 class="fg-theme">Wallet</h5>
+              <a href="https://wallet-vert-nine.vercel.app/" target="_blank">
               <button class="btn btn-theme-outline">Visit</button></a><a href="https://github.com/raquelsscode/Wallet" target="_blank"><button class="btn btn-theme-outline">GitHub</button></a>
             </div>
           </div>
@@ -296,7 +297,7 @@
             <img src="../assets/img/work/shop.png" alt="Preview Project">
             <div class="img-caption">
               <h5 class="fg-theme">Online Store</h5>
-              <a href="online-store-77ys9obnq-raquelsscode.vercel.app" target="_blank">
+               <a href="https://online-store-theta.vercel.app/" target="_blank">
               <button class="btn btn-theme-outline">Visit</button></a><a href="https://github.com/raquelsscode/Online-Store" target="_blank"><button class="btn btn-theme-outline">GitHub</button></a>
             </div>
           </div>
