--- a/html/index.html
+++ b/html/index.html
@@ -216,6 +216,15 @@
           <h2 class="fw-normal">Experiências Profissionais</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
+              <div class="title">2023</div>
+              <div class="details">
+                <h5>Desenvolvedora Fullstack</h5>
+                <small class="fg-theme">Arc Telecom</small>
+                <p>Desenvolvimento de Chatbot e Aplicativos com APIs de Software de Telefonia, nas liguagens Lua, JavaScript, PHP, utilizando ferramentas como o Node.js, HTML, CSS e banco de dados. 
+                   Desenvolvimento de chatbots em Lua, criação de aplicativos com integração de APIs de telefonia. Colaboração em equipes multidisciplinares, resolução de problemas e otimização de bancos de dados. Habilidades em desenvolvimento web e mobile, interface responsiva e testes.</p>
+              </div>
+            </li>
+            <li>
               <div class="title">2021</div>
               <div class="details">
                 <h5>Assistente Administrativo</h5>
