--- a/html/index.html
+++ b/html/index.html
@@ -218,10 +218,20 @@
             <li>
               <div class="title">2023</div>
               <div class="details">
-                <h5>Desenvolvedora Fullstack</h5>
+                <h5>Estágio em Desenvolvimento Web</h5>
                 <small class="fg-theme">Arc Telecom</small>
                 <p>Desenvolvimento de Chatbot e Aplicativos com APIs de Software de Telefonia, nas liguagens Lua, JavaScript, PHP, utilizando ferramentas como o Node.js, HTML, CSS e banco de dados. 
                    Desenvolvimento de chatbots em Lua, criação de aplicativos com integração de APIs de telefonia. Colaboração em equipes multidisciplinares, resolução de problemas e otimização de bancos de dados. Habilidades em desenvolvimento web e mobile, interface responsiva e testes.</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">2023</div>
+              <div class="details">
+                <h5> Estágio em Suporte de TI</h5>
+                <small class="fg-theme">Seta Consultoria</small>
+                <p>Auxiliar na configuração de aparelho IP; Auxiliar no atendimento ao cliente; Configuração e auxiliar na implementação do software em nuvem 3CX; 
+                  Auxiliar nas demais atividades da área.
+                </p>
               </div>
             </li>
             <li>
@@ -240,14 +250,6 @@
                 <p>Responsável pela área comercial, clientes, pedidos e faturamento.</p>
               </div>
             </li>
-            <li>
-              <div class="title">2017</div>
-              <div class="details">
-                <h5>Estágiária em Administração</h5>
-                <small class="fg-theme">Universidade Federal de São Paulo</small>
-                <p>Recepcionar professores, médicos e servidores, marcar reuniões, auxiliar nas atividades do setor, organizar e-mails, responder, montar folhas de reuniões, agendar visitas, montar tabelas, controlar e organizar salas de reunião.</p>
-              </div>
-            </li>
           </ul>
         </div>
       </div>
@@ -260,7 +262,7 @@
       <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Portfolio</div>
       </div>
-      <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
+      <div class="filterable-button py-3 wow" data-toggle="selected">
         <button class="btn btn-theme-outline selected" data-filter="*">All</button>
         <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
         <button class="btn btn-theme-outline" data-filter=".jogos">Jogos</button>
@@ -268,7 +270,7 @@
       </div>
 
       <div class="gridder my-3">
-        <div class="grid-item apps wow zoomIn">
+        <div class="grid-item apps">
           <div class="img-place" data-src="../assets/img/work/Projeto_Planets_of_Star_Wars.png">
             <img src="../assets/img/work/Projeto_Planets_of_Star_Wars.png" alt="">
             <div class="img-caption">
