--- a/html/index.html
+++ b/html/index.html
@@ -113,7 +113,7 @@
             <li><b>Idade:</b> 25 </li>
           </ul>
           <button class="btn btn-theme-outline"><a href="../assets/documents/Currículo-Raquel-Santos.pdf" download="Currículo-Raquel-Santos">Download CV</a></button>
-          <button class="btn btn-theme-outline"><a href="https://www.linkedin.com/in/raquel-santos-da-silva/" target="_blank">Linkedin</a></button>
+          <button class="btn btn-theme-outline"><a href="https://www.linkedin.com/in/raquel-santos-da-silva/" target="_blank"></a>Linkedin</button>
         </div>
       </div>
     </div>
