--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
     </div> <!-- End Navbar -->
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
-      <h5 class="fw-normal">Olá!</h5>
+      <h5 class="fw-normal">Olá! Bem-vindo(a)</h5>
       <h1 class="fw-light mb-4">Eu sou <b class="fg-theme">Raquel</b> Santos</h1>
       <div class="badge">Desenvolvedora FullStack</div>
     </div> <!-- End Caption header -->
