--- a/html/index-english.html
+++ b/html/index-english.html
@@ -126,7 +126,7 @@
             <li class="name"><b>Lives in:</b> São Paulo, SP</li>
             <li class="name"><b>Age:</b> 25 </li>
           </ul>
-          <button class="btn btn-theme-outline"><a href="../assets/documents/Currículo-Raquel-Santos.pdf" download="Currículo-Raquel-Santos">Download CV</a></button>
+          <button class="btn btn-theme-outline"><a href="../html/assets/documents/Currículo_EN.pdf" download="Raquel-Santos">Download CV</a></button>
           <button class="btn btn-theme-outline"><a href="https://www.linkedin.com/in/raquel-santos-da-silva/" target="_blank">Linkedin</a></button
         </div>
       </div>
